--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -7966,3 +7966,7 @@ table tbody tr td:nth-child(2) {
 a {
   text-decoration: none !important;
 }
+
+.rightMenu ul {
+  margin-bottom: 0 !important;
+}
