--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,7 +1,7 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800;900&family=Red+Hat+Text:ital,wght@0,400;0,500;0,600;0,700;1,700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap");
-@font-face {
+/* @font-face {
   font-family: "Graphik";
   src: url("../fonts/GraphikBlack.otf") format("opentype");
   font-weight: 900;
@@ -35,7 +35,43 @@
   font-weight: normal;
   font-style: normal;
   font-display: swap;
+} */
+@font-face {
+  font-family: "Graphik";
+  src: url("../fonts/GraphikBlack.otf") format("opentype");
+  font-weight: 900;
+  font-style: normal;
+  font-display: swap;
 }
+@font-face {
+  font-family: "Graphik";
+  src: url("../fonts/GraphikBold.otf") format("opentype");
+  font-weight: 700; /* Corrected from 800 to 700 */
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Graphik";
+  src: url("../fonts/GraphikSemibold.otf") format("opentype");
+  font-weight: 600; /* Adjusted from 700 to 600 */
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Graphik";
+  src: url("../fonts/GraphikMedium.otf") format("opentype");
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Graphik";
+  src: url("../fonts/GraphikRegular.otf") format("opentype");
+  font-weight: 400; /* Adjusted from 'normal' to 400 */
+  font-style: normal;
+  font-display: swap;
+}
+
 body {
   transition: all 0.3s ease-in-out;
   box-sizing: border-box;
