--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,7 +1,7 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800;900&family=Red+Hat+Text:ital,wght@0,400;0,500;0,600;0,700;1,700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&display=swap")
 @font-face {
   font-family: "Graphik";
   src: url("../fonts/GraphikBlack.otf") format("otf");
@@ -41,7 +41,8 @@
 body {
   transition: all 0.3s ease-in-out;
   box-sizing: border-box;
-  font-family: "Graphik";
+  /* font-family: "Graphik"; */
+  font-family: "Montserrat", sans-serif;
   overflow-x: hidden;
 }
 .b {
