--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2,28 +2,28 @@
 @import url("https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap");
 @font-face {
   font-family: "Graphik";
-  src: url("../fonts/GraphikBlack.otf") format("otf");
+  src: url("../fonts/GraphikBlack.otf") format("opentype");
   font-weight: 900;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "Graphik";
-  src: url("../fonts/GraphikBold.otf") format("otf");
+  src: url("../fonts/GraphikBold.otf") format("opentype");
   font-weight: 800;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "Graphik";
-  src: url("../fonts/GraphikSemibold.otf") format("otf");
+  src: url("../fonts/GraphikSemibold.otf") format("opentype");
   font-weight: 700;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "Graphik";
-  src: url("../fonts/GraphikMedium.otf") format("otf");
+  src: url("../fonts/GraphikMedium.otf") format("opentype");
   font-weight: 500;
   font-style: normal;
   font-display: swap;
