--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,35 +1,36 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800;900&family=Red+Hat+Text:ital,wght@0,400;0,500;0,600;0,700;1,700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap");
 @font-face {
-  font-family: "Graphik";
+  /* font-family: "Graphik"; */
+  font-family: "Graphik", sans-serif;
   src: url("../fonts/GraphikBlack.otf") format("opentype");
   font-weight: 900;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
-  font-family: "Graphik";
+  font-family: "Graphik", sans-serif; /* font-family: "Graphik"; */
   src: url("../fonts/GraphikBold.otf") format("opentype");
   font-weight: 800;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
-  font-family: "Graphik";
+  font-family: "Graphik", sans-serif; /* font-family: "Graphik"; */
   src: url("../fonts/GraphikSemibold.otf") format("opentype");
   font-weight: 700;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
-  font-family: "Graphik";
+  font-family: "Graphik", sans-serif; /* font-family: "Graphik"; */
   src: url("../fonts/GraphikMedium.otf") format("opentype");
   font-weight: 500;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
-  font-family: "Graphik";
+  font-family: "Graphik", sans-serif; /* font-family: "Graphik"; */
   src: url("../fonts/GraphikRegular.otf") format("opentype");
   font-weight: normal;
   font-style: normal;
@@ -39,7 +40,8 @@
 body {
   transition: all 0.3s ease-in-out;
   box-sizing: border-box;
-  font-family: "Graphik";
+
+  font-family: "Graphik", sans-serif; /* font-family: "Graphik"; */
   /* font-family: "Montserrat", sans-serif; */
   overflow-x: hidden;
 }
