--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -9,28 +9,28 @@
   font-display: swap;
 }
 @font-face {
-  font-family: "Graphik", sans-serif; /* font-family: "Graphik"; */
+  font-family: "Graphik";
   src: url("../fonts/GraphikBold.otf") format("opentype");
   font-weight: 800;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
-  font-family: "Graphik", sans-serif; /* font-family: "Graphik"; */
+  font-family: "Graphik";
   src: url("../fonts/GraphikSemibold.otf") format("opentype");
   font-weight: 700;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
-  font-family: "Graphik", sans-serif; /* font-family: "Graphik"; */
+  font-family: "Graphik";
   src: url("../fonts/GraphikMedium.otf") format("opentype");
   font-weight: 500;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
-  font-family: "Graphik", sans-serif; /* font-family: "Graphik"; */
+  font-family: "Graphik";
   src: url("../fonts/GraphikRegular.otf") format("opentype");
   font-weight: normal;
   font-style: normal;
@@ -41,7 +41,7 @@ body {
   transition: all 0.3s ease-in-out;
   box-sizing: border-box;
 
-  font-family: "Graphik", sans-serif; /* font-family: "Graphik"; */
+  /* font-family: "Graphik"; */
   /* font-family: "Montserrat", sans-serif; */
   overflow-x: hidden;
 }
